...
        />
      ) : null}
      <TouchableOpacity
        className="flex-1 flex-row items-center pl-4 py-3"
        activeOpacity={0.7}
        onPress={() => onPress(exercise)}
        testID="up-next-exercise-row"
      >
        <View style={{ width: MEDIA_SIZE, height: MEDIA_SIZE }}>
          <SafeImage
            source={image ? getImageSource(image) : null}
            style={{
              width: MEDIA_SIZE,
...
